Issue#65 (#153)
* fix effective arguments in ModularJavaExec

* replace run task if effective arguments should be fixed

* add tests for the run task