@@ -9,7 +9,7 @@ dependencies {
 
 application {
     mainClassName = "$moduleName/examples.Runner"
-    applicationDefaultJvmArgs = ['-XX:+PrintGCDetails']
+    applicationDefaultJvmArgs = ['-Dgreeter.sender=gradle-modules-plugin']
 }
 
 modularity {
@@ -24,5 +24,5 @@ run {
         addModules = ['java.sql']
     }
 
-    jvmArgs = ['-XX:+PrintGCDetails']
+    jvmArgs = ['-Dgreeter.sender=gradle-modules-plugin']
 }
